# kwispr

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  kwispr-local-stt-server.py  kwispr-models.py  kwispr.sh  preview-sounds.sh  setup.sh  test_kwispr_models.py
docs/: kde-whisper.md  local-stt.md
kde-whisper/: CMakeLists.txt  Containerfile  README.md  TDD_CHECKLIST.md  org.kwispr.KdeWhisper.desktop  org.kwispr.KdeWhisper.metainfo.xml
kde-whisper/scripts/: podman-test.sh
kde-whisper/src/: AppMetadata.cpp  AppMetadata.h  main.cpp
kde-whisper/src/config/: EnvFile.cpp  EnvFile.h  KwisprSettings.cpp  KwisprSettings.h
kde-whisper/src/models/: ModelCatalog.cpp  ModelCatalog.h  ModelManager.cpp  ModelManager.h
kde-whisper/src/runtime/: KwisprController.cpp  KwisprController.h  LocalSttClient.cpp  LocalSttClient.h  LocalSttProcess.cpp  LocalSttProcess.h  ProcessRunner.cpp  ProcessRunner.h
kde-whisper/src/ui/: SettingsDialog.cpp  SettingsDialog.h  TrayApp.cpp  TrayApp.h  TrayController.cpp  TrayController.h
kde-whisper/tests/: docs_check.cmake  env_file_test.cpp  install_metadata_test.cmake  local_stt_client_test.cpp  model_manager_test.cpp  process_runner_test.cpp  scaffold_test.cpp  settings_dialog_test.cpp  settings_model_test.cpp  tray_controller_test.cpp
models/: local-stt-catalog.json
rust-local-stt/: Cargo.toml  Containerfile  build-in-podman.sh
rust-local-stt/src/: main.rs
tests/: kwispr_contract_utils.py  test_kwispr_sh_contract.py  test_setup_contract.py
