[package]
name = "kwispr-local-stt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
hound = "3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
transcribe-rs = { version = "0.3.8", default-features = false, features = ["whisper-cpp", "onnx"] }

[profile.release]
strip = true
